--- a/style.css
+++ b/style.css
@@ -27,7 +27,6 @@
 	position: absolute;
 	background: blue;
 	clip: rect(0px,100px,200px,0px);
-	z-index:2;
 }
 
 .circle .fill_right{
@@ -37,11 +36,6 @@
 	position: absolute;
 	background: red;
 	clip: rect(0px,200px,200px,100px);
-	z-index:1;
-	
-	-webkit-transform: rotate(30deg);
-    -ms-transform:rotate(30deg);
-    transform:rotate(30deg);
 }
 
 .circle .percent{
@@ -51,5 +45,7 @@
 	position:absolute;
 	background: white;
 	z-index:3;
-	margin:10px;	
+	margin:10px;
+	text-align: center;
+	font-size:40px;
 }
